<resources>
    <string name="app_name">Arte de Rua</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="entrar">Continuar com o ArteDeRua</string>
    <string name="facebook_app_id">1755555964504859</string>
    <string name="fb_login_protocol_scheme">fb1755555964504859</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastro">Não é Cadastrado?...</string>
    <string name="cliqueAqui">TOQUE AQUI!</string>
    <string name="facebook">Facebook</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="usuarioNaoLocalizado">Usuário não lozalizado!</string>
    <string name="nome">Nome</string>
    <string name="csenha">Confirme a Senha</string>
    <string name="cadastrarUser">Cadastrar Agora!</string>
    <string name="jaSouCadastrado">Já sou Cadastrado...</string>
    <string name="camposVazio">Campo vazio verifique!</string>
    <string name="passwordVazio">Senha não foi preenchida!</string>
    <string name="emailVazio">Email não preenchido</string>
    <string name="nomeVazio">Seu nome está vazio!</string>
    <string name="emailInvalido">Email invalido!</string>
    <string name="senhaInvalida">Senhas diferentes!</string>
    <string name="bemVindo">Seja bem vindo</string>
    <string name="title_exit">Deslogar</string>
    <string name="title_cadastrados">Lista de Artes</string>
    <string name="title_map">Artes no Mapa</string>
    <string name="title_activity_maps">Map</string>
    <string name="NaoExisteArte">Não existe Arte cadastrada!</string>
    <string name="permissaoLocation">Ative a permissāo para poder utilizar!</string>
    <string name="habiliteLocation">Ative o GPS!</string>
    <string name="nomeDaArte">Nome da Arte</string>
    <string name="SalvarArte">Salvar a Arte</string>
    <string name="nomeArteVazio">Nome da Arte está vazio!</string>
    <string name="definaUmaNota">Defina uma nota para a Arte</string>
    <string name="fotoArte">Tira uma foto da sua Arte!</string>
    <string name="nota">Nota:</string>
    <string name="delete">Apagar</string>
    <string name="edit">Editar</string>
    <string name="compartilharImagem">Compartilhar Imagem</string>
    <string name="novaArteLocalizada">Nova Arte localizada!</string>
    <string name="information">Informaçāo</string>
    <string name="desenvolvedor">Desenvolvido por Rodrigo Scorza</string>
    <string name="version">Versāo 1.0.0</string>
</resources>
